# yfjz

./: .gitignore  README.md  instruct.md  pyproject.toml
backend/: README.md  pyproject.toml
backend/data/: yfjz.sqlite3
backend/src/yfjz/: __init__.py  app.py  cli.py
backend/src/yfjz/api/: __init__.py  provider_configs.py  runs.py  suites.py
backend/src/yfjz/core/: config.py  errors.py  secrets.py
backend/src/yfjz/evaluators/: base.py  contains.py  exact_match.py  regex_match.py  registry.py
backend/src/yfjz/providers/: base.py  openai_compatible.py
backend/src/yfjz/runs/: aggregation.py  executor.py  service.py
backend/src/yfjz/storage/: database.py  models.py  repositories.py  row_mappers.py
backend/src/yfjz/suites/: renderer.py  schema.py
backend/src/yfjz/tools/: cache.py
backend/tests/: conftest.py  test_cache.py  test_cli.py  test_evaluators.py  test_health.py  test_openai_provider.py  test_provider_configs_api.py  test_runs.py  test_suites.py
data/suites/: ceval_accountant_100.json  ceval_accountant_20.json
docs/: README.md  backend-api.md  frontend-ui.md  suite-format.md
docs/superpowers/plans/: 2026-06-28-llm-eval-platform-parallel-plan.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: style.css
frontend/src/api/: client.test.ts  client.ts  providerConfigs.ts  runs.ts  suites.ts  types.ts
frontend/src/components/: AppLayout.vue  CaseResultsTable.vue  ProgressSummary.vue  ProviderConfigForm.vue  ReportCharts.vue  StatusBadge.vue  SuiteEditor.vue
scripts/dataset/: README.md  convert_ceval.py
(+11 files in other folders)
