[project]
name = "yfjz"
version = "0.1.0"
description = "Python project managed by uv"
readme = "README.md"
authors = [
    { name = "SongTengFei", email = "3580912365@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
yfjz = "yfjz:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
