[project]
name = "yfjz"
version = "0.1.0"
description = "FastAPI backend for a custom LLM evaluation and benchmark platform"
readme = "README.md"
authors = [
    { name = "SongTengFei", email = "3580912365@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.14.8",
    "typer>=0.26.8",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
yfjz = "yfjz.cli:main"
yfjz-backend = "yfjz:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
